Changes to the overall layout including a, currently empty, projects section

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,28 @@ url: "https://github.com/pverrinder/pverrinder.github.io" # the base hostname & 
 
 exclude: ["_site", "Gemfile", "Gemfile.lock"]
 
+collections:
+  projects:
+    output: true
+
+  #reading:
+  #  output: true
+  
+  #  permalink: /projects/:path/
+  
+  #  permalink: /reading/:path/
+
+#defaults:
+  #- scope:
+  #    path: "_projects"
+  #  values:
+  #    layout: "project"
+#  - scope:
+#      path: "_reading"
+#    values:
+#      layout: "book"
+
+
 
 #twitter_username: jekyllrb
 #github_username:  jekyll
